@startuml
'https://plantuml.com/class-diagram

class Vehiculo {
    - movimientos: int
    - posicion: Posicion
    + pasarPor(visitor: IVisitor)
    + recibirSorpresa(valorSorpresa: double)
    + abrirSorpresa(sorpresa: Sorpresa)
    + moverse(posicion: Posicion)
    + getPosicionSiguiente(unaDireccion: char): Posicion
}

interface TipoVehiculo {
    + {abstract} pasarPor(visitor: IVisitor): int
    + {abstract} recibirSorpresa(sorpresaCambioVehiculo : SorpresaCambioVehiculo): TipoVehiculo
}

class Auto{
    + pasarPor(visitor: IVisitor): int
    + recibirSorpresa(sorpresaCambioVehiculo: SorpresaCambioVehiculo): TipoVehiculo
}

class Auto4x4{
    + pasarPor(visitor: IVisitor): int
    + recibirSorpresa(sorpresaCambioVehiculo: SorpresaCambioVehiculo): TipoVehiculo
}

class Moto{
    + pasarPor(visitor: IVisitor): int
    + recibirSorpresa(sorpresaCambioVehiculo: SorpresaCambioVehiculo): TipoVehiculo
}

Vehiculo --> TipoVehiculo
Auto4x4 ..|> TipoVehiculo
Auto ..|> TipoVehiculo
Moto ..|> TipoVehiculo

@enduml